@@ -11,7 +11,7 @@ from scipy.optimize import minimize, differential_evolution, least_squares
 import scipy.optimize as sciopt
 
 from refnx.analysis import Objective, Interval, PDF, is_parameter
-from refnx._lib import (unique as f_unique, PoolWrapper,
+from refnx._lib import (unique as f_unique, MapWrapper,
                         possibly_open_file, flatten)
 from refnx._lib.util import getargspec
 
@@ -416,9 +416,9 @@ class CurveFitter(object):
         pool : int or map-like object, optional
             If `pool` is an `int` then it specifies the number of threads to
             use for parallelization. If `pool == -1`, then all CPU's are used.
-            If pool is an object with a map method that follows the same
-            calling sequence as the built-in map function, then this pool is
-            used for parallelisation.
+            If pool is a map-like callable that follows the same calling
+            sequence as the built-in map function, then this pool is used for
+            parallelisation.
 
         Notes
         -----
@@ -489,7 +489,7 @@ class CurveFitter(object):
 
         # using context manager means we kill off zombie pool objects
         # but does mean that the pool has to be specified each time.
-        with PoolWrapper(pool) as g, possibly_open_file(f, 'a') as h:
+        with MapWrapper(pool) as g, possibly_open_file(f, 'a') as h:
             # if you're not creating more than 1 thread, then don't bother with
             # a pool.
             if pool == 1:
